Make up-to-date rows smaller
I want to be able to fit a lot of repositories onto a single display, so
keeping information which doesn't need acting on small is :thumbs_up:.

This change makes a `good` row take up about half as much space as a
stale row.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,6 +59,11 @@ table tr.good td.merges {
   color: green;
 }
 
+table tr.good td {
+  font-size: 1.5em;
+  padding: 10px 30px;
+}
+
 table tr.stale td.commits,
 table tr.stale td.merges, {
   color: red;
